[project]
name = "sdof-vibration-tool"
version = "0.1.0"
description = "A GUI application for analyzing Single Degree of Freedom (SDOF) vibration systems"
requires-python = ">=3.10"
dependencies = [
    "customtkinter>=5.2.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.scripts]
sdof-tool = "main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
